--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -1,5 +1,5 @@
 <div class="section">
-  <h3>A standard button</h3>
+  <h3>Standard button</h3>
   <div class="group g-01">
     <ui-button>Click</ui-button>
     <span style="display: none;">clicked</span>
@@ -8,6 +8,14 @@
   <div class="group g-02">
     <ui-button disabled>Click</ui-button>
     <span style="display: none;">clicked</span>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Unnavigable button</h3>
+  <div class="group">
+    <ui-button unnavigable>OK</ui-button>
+    <ui-button unnavigable>Cancel</ui-button>
   </div>
 </div>
 
