--- a/panel/checkbox-preview.tmpl
+++ b/panel/checkbox-preview.tmpl
@@ -31,7 +31,7 @@
 </div>
 
 <div class="section">
-  <h3>Readonly checkbox</h3>
+  <h3>Readonly</h3>
   <div class="group">
     <ui-checkbox readonly>Readonly</ui-checkbox>
   </div>
@@ -42,7 +42,7 @@
 </div>
 
 <div class="section">
-  <h3>Unnavigable checkbox</h3>
+  <h3>Unnavigable</h3>
   <div class="group">
     <ui-checkbox style="width: 100px;" unnavigable>Check</ui-checkbox>
   </div>
