--- a/panel/input-preview.tmpl
+++ b/panel/input-preview.tmpl
@@ -1,5 +1,5 @@
 <div class="section">
-  <h3>Standard input</h3>
+  <h3>Standard</h3>
   <div class="group g-01">
     <ui-input placeholder="Search..."></ui-input>
     <span class="text"></span>
@@ -74,7 +74,15 @@
 </div>
 
 <div class="section">
-  <h3>Unnavigable input</h3>
+  <h3>Readonly</h3>
+  <div class="group">
+    <ui-input placeholder="Search..." readonly></ui-input>
+    <ui-input placeholder="Search..." value="Hello World" readonly></ui-input>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Unnavigable</h3>
   <div class="group">
     <ui-input placeholder="Search..." unnavigable></ui-input>
     <ui-input placeholder="Search..." value="Hello World" unnavigable></ui-input>
