--- a/panel/select-preview.tmpl
+++ b/panel/select-preview.tmpl
@@ -1,5 +1,5 @@
 <div class="section">
-  <h3>Standard select</h3>
+  <h3>Standard</h3>
   <div class="group g-01">
     <ui-select value="4">
       <option value="0">Foo</option>
@@ -92,7 +92,17 @@
 </div>
 
 <div class="section">
-  <h3>Unnavigable select</h3>
+  <h3>Readonly</h3>
+  <div class="group">
+    <ui-select readonly>
+      <option value="0">Foo</option>
+      <option value="1">Bar</option>
+    </ui-select>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Unnavigable</h3>
   <div class="group">
     <ui-select unnavigable>
       <option value="0">Foo</option>
