--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -1,5 +1,5 @@
 <div class="section">
-  <h3>Standard button</h3>
+  <h3>Standard</h3>
   <div class="group g-01">
     <ui-button>Click</ui-button>
     <span style="display: none;">clicked</span>
@@ -12,7 +12,32 @@
 </div>
 
 <div class="section">
-  <h3>Unnavigable button</h3>
+  <h3>State</h3>
+  <div style="position: relative;">
+    <div class="group">
+      <ui-button style="width: 100px;" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="red" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="green" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="blue" pressed>Pressed</ui-button>
+    </div>
+    <div class="group">
+      <ui-button style="width: 100px;" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="red" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="green" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="blue" focused>Focused</ui-button>
+    </div>
+    <div class="group">
+      <ui-button style="width: 100px;" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="red" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="green" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="blue" disabled>Disabled</ui-button>
+    </div>
+    <div class="fit"></div>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Unnavigable</h3>
   <div class="group">
     <ui-button unnavigable>OK</ui-button>
     <ui-button unnavigable>Cancel</ui-button>
@@ -59,30 +84,5 @@
     <ui-button style="width: 100px;" class="red">Red</ui-button>
     <ui-button style="width: 100px;" class="green">Green</ui-button>
     <ui-button style="width: 100px;" class="blue">Blue</ui-button>
-  </div>
-</div>
-
-<div class="section">
-  <h3>State</h3>
-  <div style="position: relative;">
-    <div class="group">
-      <ui-button style="width: 100px;" pressed>Pressed</ui-button>
-      <ui-button style="width: 100px;" class="red" pressed>Pressed</ui-button>
-      <ui-button style="width: 100px;" class="green" pressed>Pressed</ui-button>
-      <ui-button style="width: 100px;" class="blue" pressed>Pressed</ui-button>
-    </div>
-    <div class="group">
-      <ui-button style="width: 100px;" focused>Focused</ui-button>
-      <ui-button style="width: 100px;" class="red" focused>Focused</ui-button>
-      <ui-button style="width: 100px;" class="green" focused>Focused</ui-button>
-      <ui-button style="width: 100px;" class="blue" focused>Focused</ui-button>
-    </div>
-    <div class="group">
-      <ui-button style="width: 100px;" disabled>Disabled</ui-button>
-      <ui-button style="width: 100px;" class="red" disabled>Disabled</ui-button>
-      <ui-button style="width: 100px;" class="green" disabled>Disabled</ui-button>
-      <ui-button style="width: 100px;" class="blue" disabled>Disabled</ui-button>
-    </div>
-    <div class="fit"></div>
   </div>
 </div>
