--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -1,11 +1,13 @@
 <div class="section">
-  <h3>Standard slider</h3>
+  <h3>Standard</h3>
   <div class="group g-01">
     <ui-slider value="0.5"></ui-slider>
+    <span class="text"></span>
   </div>
 
   <div class="group g-02">
     <ui-slider value="0.5" disabled></ui-slider>
+    <span class="text"></span>
   </div>
 
   <span class="event">event: none</span>
@@ -23,5 +25,14 @@
       <span class="label">Disabled</span>
     </div>
     <div class="fit"></div>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Readonly</h3>
+  <div style="position: relative;">
+    <div class="group g-03">
+      <ui-slider style="width: 200px;" value="0.5" readonly></ui-slider>
+    </div>
   </div>
 </div>
