--- a/panel/prop-preview.tmpl
+++ b/panel/prop-preview.tmpl
@@ -2,19 +2,19 @@
   <h3>Standard</h3>
   <div class="g-01">
     <ui-prop class="flex-1" name="Name">
-      <ui-input class="flex-1 tiny" value="Hello World"></ui-input>
+      <ui-input class="flex-1" value="Hello World"></ui-input>
     </ui-prop>
     <ui-prop class="flex-1" name="Custom Size">
       <ui-checkbox class="flex-1"></ui-checkbox>
     </ui-prop>
     <ui-prop class="flex-1" name="Size">
-      <ui-num-input class="flex-1 tiny" value="20"></ui-num-input>
+      <ui-num-input class="flex-1" value="20"></ui-num-input>
     </ui-prop>
     <ui-prop class="flex-1" name="Speed">
       <ui-slider class="flex-1" value="2" min="0.1" max="5"></ui-slider>
     </ui-prop>
     <ui-prop class="flex-1" name="Type">
-      <ui-select class="flex-1 tiny">
+      <ui-select class="flex-1">
         <option value="1">Wrap</option>
         <option value="2">Repeat</option>
         <option value="3">Auto</option>
@@ -24,31 +24,71 @@
       <ui-color class="flex-1" value="#09f"></ui-color>
     </ui-prop>
     <ui-prop class="flex-1" name="Clear">
-      <ui-checkbox class="tiny" style="margin-right: 40px;">Color</ui-checkbox>
-      <ui-checkbox class="tiny">Depth</ui-checkbox>
+      <ui-checkbox>Color</ui-checkbox>
+      <span style="width: 20px;"></span>
+      <ui-checkbox>Depth</ui-checkbox>
     </ui-prop>
     <ui-prop class="flex-1" name="Build">
-      <ui-button class="tiny green">Start</ui-button>
+      <div class="flex-1 layout horizontal end-justified">
+        <ui-button class="green">Start</ui-button>
+      </div>
     </ui-prop>
+
+    <h3>Foldable</h3>
+
+    <ui-prop class="flex-1" name="Object Info" foldable>
+      <ui-input class="flex-1" placeholder="Name"></ui-input>
+      <div class="custom-block">
+        <ui-prop class="flex-1" name="Position" indent="1" foldable>
+          <div class="custom-block">
+            <ui-prop class="flex-1" name="X" indent="2">
+              <ui-num-input class="flex-1" value="1"></ui-num-input>
+            </ui-prop>
+            <ui-prop class="flex-1" name="Y" indent="2">
+              <ui-num-input class="flex-1" value="2"></ui-num-input>
+            </ui-prop>
+            <ui-prop class="flex-1" name="Z" indent="2">
+              <ui-num-input class="flex-1" value="3"></ui-num-input>
+            </ui-prop>
+          </div>
+        </ui-prop>
+        <ui-prop class="flex-1" name="Rotation" indent="1">
+          <ui-num-input class="flex-1" value="20"></ui-num-input>
+        </ui-prop>
+        <ui-prop class="flex-1" name="Scale" indent="1">
+          <ui-prop class="fixed flex-1 red" name="X">
+            <ui-num-input class="flex-1" value="1"></ui-num-input>
+          </ui-prop>
+          <ui-prop class="fixed flex-1 green" name="Y">
+            <ui-num-input class="flex-1" value="2"></ui-num-input>
+          </ui-prop>
+          <ui-prop class="fixed flex-1 blue" name="Z">
+            <ui-num-input class="flex-1" value="3"></ui-num-input>
+          </ui-prop>
+        </ui-prop>
+      </div>
+    </ui-prop>
+
+    <h3>Indent</h3>
 
     <ui-prop class="flex-1" name="Animation Object">
     </ui-prop>
     <ui-prop class="flex-1" name="Name" indent="1">
-      <ui-input class="tiny flex-1" value="Foobar"></ui-input>
+      <ui-input class="flex-1" value="Foobar"></ui-input>
     </ui-prop>
     <ui-prop class="flex-1" name="Length" indent="1">
-      <ui-num-input class="tiny flex-1" value="20.3"></ui-num-input>
+      <ui-num-input class="flex-1" value="20.3"></ui-num-input>
     </ui-prop>
     <ui-prop class="flex-1" name="Auto" indent="1">
-      <ui-checkbox class="tiny flex-1" checked></ui-checkbox>
+      <ui-checkbox class="flex-1" checked></ui-checkbox>
     </ui-prop>
     <ui-prop class="flex-1" name="Advanced" indent="1">
     </ui-prop>
     <ui-prop class="flex-1" name="Move Speed" indent="2">
-      <ui-slider class="tiny flex-1"></ui-slider>
+      <ui-slider class="flex-1"></ui-slider>
     </ui-prop>
     <ui-prop class="flex-1" name="Rotate Speed" indent="2">
-      <ui-slider class="tiny flex-1"></ui-slider>
+      <ui-slider class="flex-1"></ui-slider>
     </ui-prop>
   </div>
 
