--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -8,6 +8,7 @@
   <div class="group g-02">
     <ui-button disabled>Click</ui-button>
     <span style="display: none;">clicked</span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 </div>
 
