--- a/panel/checkbox-preview.tmpl
+++ b/panel/checkbox-preview.tmpl
@@ -8,6 +8,7 @@
   <div class="group g-02">
     <ui-checkbox disabled>Check</ui-checkbox>
     <span style="display: none;">checked</span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 </div>
 
