--- a/panel/input-preview.tmpl
+++ b/panel/input-preview.tmpl
@@ -13,6 +13,7 @@
   <div class="group g-03">
     <ui-input value="Disabled" placeholder="Search..." disabled></ui-input>
     <span class="text"></span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
   <span class="event">event: none</span>
