--- a/panel/prop-preview.tmpl
+++ b/panel/prop-preview.tmpl
@@ -44,6 +44,15 @@
       <ui-button class="tiny" disabled>Apply</ui-button>
     </ui-prop>
 
+    <ui-prop name="Partial Disabled">
+      <ui-prop name="Width" class="fixed-label flex-1" disabled>
+        <ui-num-input value="300" class="flex-1" disabled></ui-num-input>
+      </ui-prop>
+      <ui-prop name="Height" class="fixed-label flex-1">
+        <ui-num-input value="400" class="flex-1"></ui-num-input>
+      </ui-prop>
+    </ui-prop>
+
     <span class="event">event: none</span>
   </div>
 </div>
