--- a/panel/select-preview.tmpl
+++ b/panel/select-preview.tmpl
@@ -20,6 +20,7 @@
       <option value="4">A Long Text</option>
     </ui-select>
     <span class="text"></span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
   <span class="event">event: none</span>
