--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -8,6 +8,7 @@
   <div class="group g-02">
     <ui-slider value="0.5" disabled></ui-slider>
     <span class="text"></span>
+    <ui-button id="focus" class="blue mini">Focus</ui-button>
   </div>
 
   <span class="event">event: none</span>
