--- a/panel/color-preview.tmpl
+++ b/panel/color-preview.tmpl
@@ -13,6 +13,7 @@
   <div class="group g-03">
     <ui-color value="rgba(255,0,0,0.8)" disabled></ui-color>
     <span class="text"></span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
   <span class="event">event: none</span>
