--- a/panel/num-input-preview.tmpl
+++ b/panel/num-input-preview.tmpl
@@ -13,6 +13,7 @@
   <div class="group g-03">
     <ui-num-input value="123.45" disabled></ui-num-input>
     <span class="text"></span>
+    <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
   <span class="event">event: none</span>
