--- a/panel/checkbox-preview.tmpl
+++ b/panel/checkbox-preview.tmpl
@@ -2,14 +2,14 @@
   <h3>Standard checkbox</h3>
   <div class="group g-01">
     <ui-checkbox>Check</ui-checkbox>
-    <span style="display: none;">checked</span>
   </div>
 
   <div class="group g-02">
     <ui-checkbox disabled>Check</ui-checkbox>
-    <span style="display: none;">checked</span>
     <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
+
+  <span id="event">event: none</span>
 </div>
 
 <div class="section">
