--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -2,14 +2,14 @@
   <h3>Standard</h3>
   <div class="group g-01">
     <ui-button>Click</ui-button>
-    <span style="display: none;">clicked</span>
   </div>
 
   <div class="group g-02">
     <ui-button disabled>Click</ui-button>
-    <span style="display: none;">clicked</span>
     <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
+
+  <span id="event">event: none</span>
 </div>
 
 <div class="section">
