--- a/panel/prop-preview.tmpl
+++ b/panel/prop-preview.tmpl
@@ -66,7 +66,11 @@
       </ui-prop>
     </ui-prop>
 
-    <span class="event">event: none</span>
+    <ui-prop class="flex-1" name="Auto Height" auto-height>
+      <ui-text-area class="flex-1" resize-v></ui-text-area>
+    </ui-prop>
+
+    <span id="event">event: none</span>
   </div>
 </div>
 
