--- a/panel/prop-preview.tmpl
+++ b/panel/prop-preview.tmpl
@@ -70,7 +70,7 @@
       <ui-text-area class="flex-1" resize-v></ui-text-area>
     </ui-prop>
 
-    <span id="event">event: none</span>
+    <span id="event">event: ---</span>
   </div>
 </div>
 
