--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -11,7 +11,7 @@
     <ui-button id="focus" class="blue mini">Focus</ui-button>
   </div>
 
-  <span id="event">event: none</span>
+  <span id="event">event: ---</span>
 </div>
 
 <div class="section">
