--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -9,7 +9,7 @@
     <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
-  <span id="event">event: none</span>
+  <span id="event">event: ---</span>
 </div>
 
 <div class="section">
