--- a/panel/input-preview.tmpl
+++ b/panel/input-preview.tmpl
@@ -16,7 +16,7 @@
     <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
-  <span id="event">event: none</span>
+  <span id="event">event: ---</span>
 </div>
 
 <div class="section">
