add overflow visual test

--- a/panel/select-preview.tmpl
+++ b/panel/select-preview.tmpl
@@ -23,6 +23,15 @@
     <ui-button id="focus" class="mini blue">Focus</ui-button>
   </div>
 
+  <div class="group g-03">
+    <ui-select style="width: 100px">
+      <option value="0">A Long Text</option>
+      <option value="1">A Long Long Text</option>
+      <option value="2">A Long Long Long Text</option>
+      <option value="3" selected>A Long Long Long Long Text</option>
+    </ui-select>
+  </div>
+
   <span id="event">event: ---</span>
 </div>
 
