--- a/panel/button-preview.tmpl
+++ b/panel/button-preview.tmpl
@@ -46,15 +46,6 @@
 </div>
 
 <div class="section" style="display: none;">
-  <h3>Icon (TODO)</h3>
-  <div class="group">
-    <ui-button class="animated">
-      <i class="icon cloud"></i>
-    </ui-button>
-  </div>
-</div>
-
-<div class="section" style="display: none;">
   <h3>Animated (TODO)</h3>
   <div class="group">
     <ui-button class="animated">
@@ -76,6 +67,16 @@
     <ui-button class="huge">Huge</ui-button>
     <ui-button class="massive">Massive</ui-button>
   </div>
+  <div class="group">
+    <ui-button class="mini"><i class="icon-ok"></i></ui-button>
+    <ui-button class="tiny"><i class="icon-ok"></i></ui-button>
+    <ui-button class="small"><i class="icon-ok"></i></ui-button>
+    <ui-button class="medium"><i class="icon-ok"></i></ui-button>
+    <ui-button class="large"><i class="icon-ok"></i></ui-button>
+    <ui-button class="big"><i class="icon-ok"></i></ui-button>
+    <ui-button class="huge"><i class="icon-ok"></i></ui-button>
+    <ui-button class="massive"><i class="icon-ok"></i></ui-button>
+  </div>
 </div>
 
 <div class="section">
@@ -85,5 +86,74 @@
     <ui-button style="width: 100px;" class="red">Red</ui-button>
     <ui-button style="width: 100px;" class="green">Green</ui-button>
     <ui-button style="width: 100px;" class="blue">Blue</ui-button>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Transparent</h3>
+  <div class="group">
+    <ui-button class="transparent">Default</ui-button>
+    <ui-button class="red transparent">Red</ui-button>
+    <ui-button class="green transparent">Green</ui-button>
+    <ui-button class="blue transparent">Blue</ui-button>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Transparent State</h3>
+  <div style="position: relative;">
+    <div class="group">
+      <ui-button style="width: 100px;" class="transparent" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="transparent red" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="transparent green" pressed>Pressed</ui-button>
+      <ui-button style="width: 100px;" class="transparent blue" pressed>Pressed</ui-button>
+    </div>
+    <div class="group">
+      <ui-button style="width: 100px;" class="transparent" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="transparent red" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="transparent green" focused>Focused</ui-button>
+      <ui-button style="width: 100px;" class="transparent blue" focused>Focused</ui-button>
+    </div>
+    <div class="group">
+      <ui-button style="width: 100px;" class="transparent" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="transparent red" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="transparent green" disabled>Disabled</ui-button>
+      <ui-button style="width: 100px;" class="transparent blue" disabled>Disabled</ui-button>
+    </div>
+    <div class="fit"></div>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Transparent Icon</h3>
+  <div class="group">
+    <ui-button class="transparent"><i class="icon-eye"></i></ui-button>
+    <ui-button class="red transparent"><i class="icon-cancel"></i></ui-button>
+    <ui-button class="green transparent"><i class="icon-ok"></i></ui-button>
+    <ui-button class="blue transparent"><i class="icon-cw"></i></ui-button>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Transparent Size</h3>
+  <div class="group">
+    <ui-button class="transparent mini">Mini</ui-button>
+    <ui-button class="transparent tiny">Tiny</ui-button>
+    <ui-button class="transparent small">Small</ui-button>
+    <ui-button class="transparent medium">Medium</ui-button>
+    <ui-button class="transparent large">Large</ui-button>
+    <ui-button class="transparent big">Big</ui-button>
+    <ui-button class="transparent huge">Huge</ui-button>
+    <ui-button class="transparent massive">Massive</ui-button>
+  </div>
+  <div class="group">
+    <ui-button class="transparent mini"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent tiny"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent small"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent medium"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent large"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent big"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent huge"><i class="icon-ok"></i></ui-button>
+    <ui-button class="transparent massive"><i class="icon-ok"></i></ui-button>
   </div>
 </div>
