--- a/panel/input-preview.tmpl
+++ b/panel/input-preview.tmpl
@@ -41,36 +41,36 @@
 <div class="section">
   <h3>Size</h3>
   <div class="group">
-    <ui-input class="mini" placeholder="Mini..."></ui-input>
-    <ui-input class="mini" value="Mini"></ui-input>
+    <ui-input style="width: 200px;" class="mini" placeholder="Mini..."></ui-input>
+    <ui-input style="width: 200px;" class="mini" value="Mini"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="tiny" placeholder="Tiny..."></ui-input>
-    <ui-input class="tiny" value="Tiny"></ui-input>
+    <ui-input style="width: 200px;" class="tiny" placeholder="Tiny..."></ui-input>
+    <ui-input style="width: 200px;" class="tiny" value="Tiny"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="small" placeholder="Small..."></ui-input>
-    <ui-input class="small" value="Small"></ui-input>
+    <ui-input style="width: 200px;" class="small" placeholder="Small..."></ui-input>
+    <ui-input style="width: 200px;" class="small" value="Small"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="medium" placeholder="Medium..."></ui-input>
-    <ui-input class="medium" value="Medium"></ui-input>
+    <ui-input style="width: 200px;" class="medium" placeholder="Medium..."></ui-input>
+    <ui-input style="width: 200px;" class="medium" value="Medium"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="large" placeholder="Large..."></ui-input>
-    <ui-input class="large" value="Large"></ui-input>
+    <ui-input style="width: 200px;" class="large" placeholder="Large..."></ui-input>
+    <ui-input style="width: 200px;" class="large" value="Large"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="big" placeholder="Big..."></ui-input>
-    <ui-input class="big" value="Big"></ui-input>
+    <ui-input style="width: 200px;" class="big" placeholder="Big..."></ui-input>
+    <ui-input style="width: 200px;" class="big" value="Big"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="huge" placeholder="Huge..."></ui-input>
-    <ui-input class="huge" value="Huge"></ui-input>
+    <ui-input style="width: 200px;" class="huge" placeholder="Huge..."></ui-input>
+    <ui-input style="width: 200px;" class="huge" value="Huge"></ui-input>
   </div>
   <div class="group">
-    <ui-input class="massive" placeholder="Massive..."></ui-input>
-    <ui-input class="massive" value="Massive"></ui-input>
+    <ui-input style="width: 200px;" class="massive" placeholder="Massive..."></ui-input>
+    <ui-input style="width: 200px;" class="massive" value="Massive"></ui-input>
   </div>
 </div>
 
