--- a/panel/text-area-preview.tmpl
+++ b/panel/text-area-preview.tmpl
@@ -41,36 +41,36 @@
 <div class="section">
   <h3>Size</h3>
   <div class="group">
-    <ui-text-area class="mini" placeholder="Mini..."></ui-text-area>
-    <ui-text-area class="mini" value="Mini"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="mini" placeholder="Mini..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="mini" value="Mini"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="tiny" placeholder="Tiny..."></ui-text-area>
-    <ui-text-area class="tiny" value="Tiny"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="tiny" placeholder="Tiny..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="tiny" value="Tiny"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="small" placeholder="Small..."></ui-text-area>
-    <ui-text-area class="small" value="Small"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="small" placeholder="Small..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="small" value="Small"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="medium" placeholder="Medium..."></ui-text-area>
-    <ui-text-area class="medium" value="Medium"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="medium" placeholder="Medium..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="medium" value="Medium"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="large" placeholder="Large..."></ui-text-area>
-    <ui-text-area class="large" value="Large"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="large" placeholder="Large..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="large" value="Large"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="big" placeholder="Big..."></ui-text-area>
-    <ui-text-area class="big" value="Big"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="big" placeholder="Big..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="big" value="Big"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="huge" placeholder="Huge..."></ui-text-area>
-    <ui-text-area class="huge" value="Huge"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="huge" placeholder="Huge..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="huge" value="Huge"></ui-text-area>
   </div>
   <div class="group">
-    <ui-text-area class="massive" placeholder="Massive..."></ui-text-area>
-    <ui-text-area class="massive" value="Massive"></ui-text-area>
+    <ui-text-area style="width: 200px;" class="massive" placeholder="Massive..."></ui-text-area>
+    <ui-text-area style="width: 200px;" class="massive" value="Massive"></ui-text-area>
   </div>
 </div>
 
