--- a/panel/num-input-preview.tmpl
+++ b/panel/num-input-preview.tmpl
@@ -42,43 +42,43 @@
   <h3>Size</h3>
   <div class="group">
     <span class="label" style="width: 50px;">Mini</span>
-    <ui-num-input class="mini"></ui-num-input>
-    <ui-num-input class="mini" value="-0.001"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="mini"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="mini" value="-0.001"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Tiny</span>
-    <ui-num-input class="tiny"></ui-num-input>
-    <ui-num-input class="tiny" value="-0.01"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="tiny"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="tiny" value="-0.01"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Small</span>
-    <ui-num-input class="small"></ui-num-input>
-    <ui-num-input class="small" value="-0.1"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="small"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="small" value="-0.1"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Medium</span>
-    <ui-num-input class="medium"></ui-num-input>
-    <ui-num-input class="medium" value="1.0"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="medium"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="medium" value="1.0"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Large</span>
-    <ui-num-input class="large"></ui-num-input>
-    <ui-num-input class="large" value="10.0"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="large"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="large" value="10.0"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Big</span>
-    <ui-num-input class="big"></ui-num-input>
-    <ui-num-input class="big" value="100.0"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="big"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="big" value="100.0"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Huge</span>
-    <ui-num-input class="huge"></ui-num-input>
-    <ui-num-input class="huge" value="1000.0"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="huge"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="huge" value="1000.0"></ui-num-input>
   </div>
   <div class="group">
     <span class="label" style="width: 50px;">Massive</span>
-    <ui-num-input class="massive"></ui-num-input>
-    <ui-num-input class="massive" value="10000.0"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="massive"></ui-num-input>
+    <ui-num-input style="width: 120px;" class="massive" value="10000.0"></ui-num-input>
   </div>
 </div>
 
