--- a/panel/markdown-preview.tmpl
+++ b/panel/markdown-preview.tmpl
@@ -155,6 +155,8 @@
 
       <dt>Markdown in HTML</dt>
       <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
+
+      <dd><span style="color: #900">Foobar</span></dd>
     </dl>
   </ui-markdown>
 
