--- a/panel/hint-preview.tmpl
+++ b/panel/hint-preview.tmpl
@@ -77,11 +77,26 @@
 </div>
 
 <div class="section">
+  <h3>Shadow</h3>
+  <div class="group">
+    <ui-hint class="bottom shadow">
+      Hello World
+    </ui-hint>
+  </div>
+</div>
+
+<div class="section">
   <h3>Mixed</h3>
   <div class="group">
     <ui-hint class="bottom">
       Hello World <br/>
       <a href="http://github.com"><b>API Reference</b></a>
+    </ui-hint>
+  </div>
+
+  <div class="group">
+    <ui-hint class="bottom" style="max-width: 200px">
+      A long loong looong loooong looooong loooooong looooooong loooooooong text
     </ui-hint>
   </div>
 </div>
