--- a/panel/num-input-preview.tmpl
+++ b/panel/num-input-preview.tmpl
@@ -39,6 +39,62 @@
 </div>
 
 <div class="section">
+  <h3>Precision</h3>
+  <div class="group">
+    <ui-num-input precision="2" value="123.45"></ui-num-input>
+    precision="2"
+  </div>
+  <div class="group">
+    <ui-num-input precision="3" value="123.456" step="0.001"></ui-num-input>
+    precision="3" step="0.001"
+  </div>
+</div>
+
+<div class="section">
+  <h3>Integer</h3>
+  <div class="group">
+    <ui-num-input type="int" value="123"></ui-num-input>
+    type="int"
+  </div>
+  <div class="group">
+    <ui-num-input type="int" value="123" step="10"></ui-num-input>
+    type="int" step="10"
+  </div>
+</div>
+
+<div class="section">
+  <h3>Min Max</h3>
+  <div class="group">
+    <ui-num-input value="0.1" min="0"></ui-num-input>
+    min="0"
+  </div>
+  <div class="group">
+    <ui-num-input value="0.2" max="1.0"></ui-num-input>
+    max="1.0"
+  </div>
+  <div class="group">
+    <ui-num-input value="0.3" min="0" max="1.0"></ui-num-input>
+    min="0" max="1.0"
+  </div>
+  <div class="group">
+    <ui-num-input value="0.4" min="0" max="1.0" step="10"></ui-num-input>
+    min="0" max="1.0" step="10"
+  </div>
+  <div class="group">
+    <ui-num-input type="int" value="5" min="0"></ui-num-input>
+    type="int" min="0"
+  </div>
+  <div class="group">
+    <ui-num-input type="int" value="6" max="10"></ui-num-input>
+    type="int" max="10"
+  </div>
+  <div class="group">
+    <ui-num-input type="int" value="7" min="0" max="10"></ui-num-input>
+    type="int" min="0" max="10"
+  </div>
+</div>
+
+<div class="section">
   <h3>Size</h3>
   <div class="group">
     <span class="label" style="width: 50px;">Mini</span>
