--- a/panel/section-preview.tmpl
+++ b/panel/section-preview.tmpl
@@ -17,4 +17,22 @@
     <ui-prop name="Name" type="string" value="Foo"></ui-prop>
     <ui-prop name="ID" type="number" value="0"></ui-prop>
   </ui-section>
+
+  <ui-section>
+    <div class="header">
+      <ui-checkbox></ui-checkbox>
+      Complex UI
+      <span class="flex-1"></span>
+      <ui-button class="transparent tiny red">Reset</ui-button>
+    </div>
+    <div style="padding: 10px;">
+      <ui-markdown>
+        You can use `npm` to install prebuilt electron binaries:
+
+        ```sh
+        npm install electron-prebuilt --save-dev
+        ```
+      </ui-markdown>
+    </div>
+  </ui-section>
 </div>
