--- a/panel/hint-preview.tmpl
+++ b/panel/hint-preview.tmpl
@@ -99,4 +99,23 @@
       A long loong looong loooong looooong loooooong looooooong loooooooong text
     </ui-hint>
   </div>
+
+  <div class="group">
+    <ui-hint class="bottom">
+      <ui-markdown>
+        ## Automatic layout mode
+
+        - `NONE` - no automatic arrangement of child Nodes
+        - `HORIZONTAL` - automatic horizontal arrangement of child Nodes
+        - `VERTICAL` - automatic vertical arrangement of child Nodes
+        - `GRID` - automatic grid arrangement of child Nodes"
+
+        **Example:**
+
+        ```javascript
+        new Layout('GRID');
+        ```
+      </ui-markdown>
+    </ui-hint>
+  </div>
 </div>
