--- a/panel/num-input-preview.tmpl
+++ b/panel/num-input-preview.tmpl
@@ -92,6 +92,10 @@
     <ui-num-input type="int" value="7" min="0" max="10"></ui-num-input>
     type="int" min="0" max="10"
   </div>
+  <div class="group">
+    <ui-num-input value="8" min="1" max="10"></ui-num-input>
+    min="1" max="10"
+  </div>
 </div>
 
 <div class="section">
