--- a/panel/prop-preview.tmpl
+++ b/panel/prop-preview.tmpl
@@ -135,6 +135,15 @@
           </ui-prop>
         </div>
       </ui-prop>
+
+      <ui-prop class="flex-1" name="Readonly With Subset" indent="1" readonly>
+        <ui-prop name="Width" class="fixed-label flex-1" subset>
+          <ui-num-input value="300" class="flex-1"></ui-num-input>
+        </ui-prop>
+        <ui-prop name="Height" class="fixed-label flex-1" subset>
+          <ui-num-input value="400" class="flex-1"></ui-num-input>
+        </ui-prop>
+      </ui-prop>
     </div>
   </ui-prop>
 </div>
