--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -30,6 +30,34 @@
 </div>
 
 <div class="section">
+  <h3>Precision</h3>
+  <div class="group">
+    <ui-slider precision="2" value="0.5" min="0.0" max="1.0"></ui-slider>
+    precision="2" min="0.0" max="1.0"
+  </div>
+  <div class="group">
+    <ui-slider precision="3" value="0.5" min="0.0" max="1.0"></ui-slider>
+    precision="3" min="0.0" max="1.0"
+  </div>
+</div>
+
+<div class="section">
+  <h3>Min Max</h3>
+  <div class="group">
+    <ui-slider value="0.0" min="-1.0" max="1.0"></ui-slider>
+    value="0.0" min="-1.0" max="1.0"
+  </div>
+</div>
+
+<div class="section">
+  <h3>Step</h3>
+  <div class="group">
+    <ui-slider value="0.0" min="-100.0" max="100.0" step="10.0"></ui-slider>
+    value="0.0" min="-100.0" max="100.0" step="10.0"
+  </div>
+</div>
+
+<div class="section">
   <h3>Readonly</h3>
   <div style="position: relative;">
     <div class="group g-03">
